Modernize codebase
Use following constructs:
- Optional.orElseThrow()
- BindingMap.of()
- List.of()

Also do not mock binding constructs, but rather rely of builders to
provide completely-functioning implementations.

Change-Id: Ie0753166443bdf85e7437e7911a8d3f91afc0efe
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>